fix(calculated--value): overflow fixed by scrollbar and numeral js convert number to string

--- a/scss/components.scss
+++ b/scss/components.scss
@@ -84,8 +84,10 @@
     display: flex;
     flex-direction: row;
     column-gap: 3.65rem;
+    width: 14rem;
     max-width: 14rem;
     min-width: 5rem;
+    justify-content: space-between;
 }
 
 .display-text {
@@ -94,30 +96,30 @@
     font-style: normal;
     color: variables.$neutral-White;
     margin-top: -0.1rem;
+    white-space: nowrap;
 }
 
 .calculated--value {
     font-style: normal;
     font-size: 2rem;
-    position: relative;
-    top: -0.75rem;
-    left: 0.435rem;
     color: variables.$strong-cyan;
+    position: relative;
+    top: -0.3rem;
+    overflow-x: auto;
 }
 
 .text--subtext {
+    display: block;
     font-size: 0.52rem;
     font-style: normal;
     line-height: 0.8rem;
     color: variables.$neutral-Grayish-cyan;
-    white-space: nowrap;
 }
 
 .text--subheading {
     font-style: normal;
     line-height: 0.8rem;
     color: white;
-    white-space: nowrap;
 }
 
 .reset__btn {
